Add links to recipes' pages in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/nasi-lemak.html">Nasi Lemak</a></li>
+        <li><a href="./recipes/mee-kari.html">Mee Kari</a></li>
+        <li><a href="./recipes/pan-mee.html">Pan Mee</a></li>
+    </ul>
 </body>
 </html>
