Describe what nasi lemak is in it's page

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Nasi Lemak</h1>
     <img src="../images/nasi-lemak.jpg" alt="A plate of Nasi Lemak">
+    <h3>Description</h3>
+    <p>Nasi Lemak is Malaysia's national dish. Usually eaten during breakfast or dinner (or lunch or late night ...), Nasi Lemak in its most basic form is coconut rice paired with <em>sambal</em> (chilli paste), peanuts and anchovies. Slices of cucumber are also included on the side, along with half of boiled egg.</p>
+    <p>Though not portrayed in the image, Nasi Lemak is also commonly eaten with protein such as chicken (usually fried), more eggs, squids, or cow's lungs (boiled or fried).</p>
 </body>
 </html>
