Add ingredients of nasi lemak on the page

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -8,8 +8,45 @@
 <body>
     <h1>Nasi Lemak</h1>
     <img src="../images/nasi-lemak.jpg" alt="A plate of Nasi Lemak">
+
     <h3>Description</h3>
     <p>Nasi Lemak is Malaysia's national dish. Usually eaten during breakfast or dinner (or lunch or late night ...), Nasi Lemak in its most basic form is coconut rice paired with <em>sambal</em> (chilli paste), peanuts and anchovies. Slices of cucumber are also included on the side, along with half of boiled egg.</p>
     <p>Though not portrayed in the image, Nasi Lemak is also commonly eaten with protein such as chicken (usually fried), more eggs, squids, or cow's lungs (boiled or fried).</p>
+
+    <h3>Ingredients</h3>
+
+    <h4>Coconut milk steamed rice</h4>
+    <ul>
+        <li>2 cups of rice</li>
+        <li>3 screwpine leaves aka pandan leaves (tie in knots)</li>
+        <li>Salt to taste</li>
+        <li>5.6oz of coconut milk</li>
+        <li>Water</li>
+    </ul>
+
+    <h4>Tamarind juice</h4>
+    <ul>
+        <li>1 cup of water</li>
+        <li>Tamarind pulp</li>
+    </ul>
+
+    <h4>Sambal</h4>
+    <ul>
+        <li>1/2 of red onion</li>
+        <li>1 cup of anchovies</li>
+        <li>1 clove of garlic</li>
+        <li>4 shallots</li>
+        <li>10 dried chillies</li>
+        <li>1 teaspoon of <em>belacan</em> (prawn paste)</li>
+        <li>1/4 teaspoon of salt</li>
+        <li>1 tablespoon of sugar</li>
+    </ul>
+
+    <h4>Other ingredients</h4>
+    <ul>
+        <li>2 hard boiled eggs (cut in half)</li>
+        <li>Your choice of protein</li>
+        <li>Slices of cucumber</li>
+    </ul>
 </body>
 </html>
