Add the first 3 steps to cooking nasi lemak

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -48,5 +48,12 @@
         <li>Your choice of protein</li>
         <li>Slices of cucumber</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>To cook the rice, wash and drain as per usual. In addition to the water, add in coconut milk and salt before cooking. Lastly, add in pandan leaves before leaving it to cook.</li>
+        <li>Fry the anchovies until they turn light brown</li>
+        <li>Slice the red onions into rings. Smash the belacan with shallots, garlic and deseeded dried chillies with a mortar and pestle or a blender.</li>
+    </ol>
 </body>
 </html>
