Add the rest of the steps for nasi lemak

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -54,6 +54,12 @@
         <li>To cook the rice, wash and drain as per usual. In addition to the water, add in coconut milk and salt before cooking. Lastly, add in pandan leaves before leaving it to cook.</li>
         <li>Fry the anchovies until they turn light brown</li>
         <li>Slice the red onions into rings. Smash the belacan with shallots, garlic and deseeded dried chillies with a mortar and pestle or a blender.</li>
+        <li>Soak tamarind juice in water for 15 minutes. Squeeze the tamarind pulp to extract the flavor into the water. Drain the pulp and keep the tamarind juice.</li>
+        <li>Fry the sambal until fragrant. Add in onion rings and ikan bilis. Stir well. Add tamarind juice, salt and sugar. Simmer on low heat until the gravy thickens. Set aside.</li>
+        <li>Cook your protein however you like. Dish up the cooked coconut milk rice and pour some sambal on top of it. Put slices of cucumber and eggs alongside them. Lastly, put the protein of choice in as well.</li>
+        <li>Enjoy!</li>
     </ol>
+
+    <p><em>This recipe is taken from <a href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a></em></p>
 </body>
 </html>
