Add description of Mee Kari in mee-kari.html

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -9,5 +9,9 @@
     <h1>Mee Kari</h1>
 
     <img src="../images/mee-kari.jpg" alt="A bowl of mee kari">
+
+    <h3>Description</h3>
+    <p>Mee Kari is a food loved by all Malaysians. Mee Kari directly translated to English is curry mee. It is often found at small hawker stalls that can be found in the streets of cities like Penang or Kuala Lumpur, or at the roadside of many main and small roads in Malaysia.</p>
+    <p>Mee Kari is egg noodles served in curry broth. Various vegetables, eggs, shredded chicken, fishballs and fried tofu are also added into the bowl with the noodle. Some versions even have prawns or cockles in them to give more variety in their taste. Whatever the version Mee Kari is, all I can say is that (and all Malaysians will agree with me), it is a dish that will leave you wanting for more!</p>
 </body>
 </html>
