Edit ingredients for mee-kari.html for clarity

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -15,16 +15,26 @@
     <p>Mee Kari is egg noodles served in curry broth. Various vegetables, eggs, shredded chicken, fishballs and fried tofu are also added into the bowl with the noodle. Some versions even have prawns or cockles in them to give more variety in their taste. Whatever the version Mee Kari is, all I can say is that (and all Malaysians will agree with me), it is a dish that will leave you wanting for more!</p>
 
     <h3>Ingredients</h3>
+
+    <h4>Main Ingredients:</h4>
     <ul>
         <li>200g fried soya bean cubes (halved or quartered)</li>
         <li>300g shredded, cooked chicken meat</li>
         <li>300g blanched bean sprouts</li>
         <li>200g shelled cockles</li>
         <li>600g blanched yellow noodles</li>
-        <li>1kg grated coconut, to be mixed with 4 litres water and squeezed for the coconut milk</li>
+        <li>500ml of coconut milk</li>
+    </ul>
+
+    <h4>Seasonings:</h4>
+    <ul>
         <li>2tbsp salt or to taste</li>
         <li>1.5tbsp rock sugar</li>
         <li>0.5tbsp MSG</li>
+    </ul>
+
+    <h4>Spices:</h4>
+    <ul>
         <li>100g shallots</li>
         <li>25g garlic</li>
         <li>3tbsp coriander seeds</li>
