Capitalise ingredients nasi-lemak.html; Add colon

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -15,7 +15,7 @@
 
     <h3>Ingredients</h3>
 
-    <h4>Coconut milk steamed rice</h4>
+    <h4>Coconut Milk Steamed Rice:</h4>
     <ul>
         <li>2 cups of rice</li>
         <li>3 screwpine leaves aka pandan leaves (tie in knots)</li>
@@ -24,13 +24,13 @@
         <li>Water</li>
     </ul>
 
-    <h4>Tamarind juice</h4>
+    <h4>Tamarind Juice:</h4>
     <ul>
         <li>1 cup of water</li>
         <li>Tamarind pulp</li>
     </ul>
 
-    <h4>Sambal</h4>
+    <h4>Sambal:</h4>
     <ul>
         <li>1/2 of red onion</li>
         <li>1 cup of anchovies</li>
@@ -42,7 +42,7 @@
         <li>1 tablespoon of sugar</li>
     </ul>
 
-    <h4>Other ingredients</h4>
+    <h4>Other Ingredients:</h4>
     <ul>
         <li>2 hard boiled eggs (cut in half)</li>
         <li>Your choice of protein</li>
