Add steps in mee-kari.html

--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -43,5 +43,12 @@
         <li>10 peppercorns</li>
         <li>0.5tbsp shrimp paste or <em>belacan</em></li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Finely ground the spices. Add 0.5cup of oil to saute the spices until fragrant.</li>
+        <li>Add in salt, rock sugar and 500ml of coconut milk until sugar dissolves. Add in fried soya bean cubes.</li>
+        <li>When the curry boils, put in the rest of the ingredients in the curry to cook.</li>
+    </ol>
 </body>
 </html>
