Add description in pan-mee.html

--- a/recipes/pan-mee.html
+++ b/recipes/pan-mee.html
@@ -10,5 +10,7 @@
 
     <img src="../images/pan-mee.jpg" alt="A bowl of pan mee">
 
+    <h3>Description</h3>
+    <p>Pan Mee is a popular dish in Malaysia, especially in Kuala Lumpur, which is also where most people claimed it is from. This dish is only made out of simple ingredients such as flat noodles, ground beef and anchovies, but do not be be fooled by it's simplicity, for that is what makes it so special. The combination of these ingredients produces a superb flavour makes it the go-to dish for many Malaysians and cementing it's place in the Malaysian culture.</p>
 </body>
 </html>
