Add ingredients to pan-mee.html

--- a/recipes/pan-mee.html
+++ b/recipes/pan-mee.html
@@ -12,5 +12,39 @@
 
     <h3>Description</h3>
     <p>Pan Mee is a popular dish in Malaysia, especially in Kuala Lumpur, which is also where most people claimed it is from. This dish is only made out of simple ingredients such as flat noodles, ground beef and anchovies, but do not be be fooled by it's simplicity, for that is what makes it so special. The combination of these ingredients produces a superb flavour makes it the go-to dish for many Malaysians and cementing it's place in the Malaysian culture.</p>
+
+    <h3>Ingredients</h3>
+
+    <h4>Soup:</h4>
+    <ul>
+        <li>1 cup of dried anchovies (heads removed)</li>
+        <li>1lb. beef/pork bones</li>
+        <li>10 cups of water</li>
+        <li>3 stalks of scallions (white part only)</li>
+        <li>Salt to taste</li>
+    </ul>
+
+    <h4>Dough:</h4>
+    <ul>
+        <li>2 cups of all-purpose flour</li>
+        <li>1 large egg</li>
+        <li>1/4 cup of water (+2tbsp of water)</li>
+        <li>Extra flour for dusting</li>
+    </ul>
+    
+    <h4>Ground Beef/Pork and Mushroom Topping:</h4>
+    <ul>
+        <li>1tbsp oil</li>
+        <li>1 clove garlic (fairly minced)</li>
+        <li>4oz. ground beef/pork</li>
+        <li>4 dried shiitake mushrooms (soaked in warm water and stems removed, cut into strips)</li>
+        <li>1tbsp black soy sauce</li>
+        <li>1tbsp soy sauce</li>
+        <li>1tsp oyster sauce</li>
+        <li>1 1/2 teaspoons sugar</li>
+        <li>3 dashes of white pepper</li>
+        <li>1/2 cup water</li>
+        <li>1tsp corn starch (+1tbsp water)</li>
+    </ul>
 </body>
 </html>
