Add instructions to pan-mee.html

--- a/recipes/pan-mee.html
+++ b/recipes/pan-mee.html
@@ -46,5 +46,20 @@
         <li>1/2 cup water</li>
         <li>1tsp corn starch (+1tbsp water)</li>
     </ul>
+
+    <h3>Instructions</h3>
+    <ol>
+        <li>Wash the anchovies thoroughly with water. Rinse about 5 times or until the water turns clear.</li>
+        <li>Wash the beef/pork bones thoroughly and scald them with some hot boiling water. Leave the beef/pork bones in the water for a few minutes and then discard the cloudy water. Rinse again with cold running water to remove all impurities from the beef/pork bones. This step ensures that the soup will be clearer once cooked.</li>
+        <li>Bring the 10 cups of water to boiling point, then add 1 cup of the anchovies, beef/pork bones, and scallions, turn the heat to medium low and slowly boil the soup for over 1 hour, or until the soup is flavorful. Add more water once the soup evaporated and season with some salt, to taste.</li>
+        <li>Prepare the dough by combining all the ingredients together in a big mixing bowl, stirring and mixing with a spoon first, then knead the dough with your hand until the dough is no longer sticky. You might add a little bit water or flour to get to the desired consistency. Cover with a damp cloth and rest for an hour.</li>
+        <li>In the meantime, prepare the Ground Beef/Pork and Mushroom Topping by firing up a wok. Add the oil and when the oil is heated, add the garlic and stir-fry until aromatic. Add the ground beef/pork and continue to stir-fry and use the spatula to break up the lumps into smaller pieces.</li>
+        <li>Add the mushrooms and stir to combine well. Season with all the seasonings and add the water. Turn the heat to low and braise for about 5 minutes or so. Add the cornstarch and water mixture to thicken up the sauce. Dish out and set aside.</li>
+        <li>Prepare the remaining anchovies by frying with some oil. Make sure the anchovies are perfectly fried until golden brown in color and crispy. Set aside the fried anchovies.</li>
+        <li>Bring a pot of water to boil while you prepare the dough. There are two ways to prepare the dough, with hand or a pasta machine. If you don't have a pasta machine, divide the dough into a few portions and flatten the dough with a rolling pin on a flat surface dusted with some flour.</li>
+        <li>At this point, you can cut the dough into thicker strands of noodles using a knife to make them into broad noodles, or you can just tear the dough into pieces. The shapes will be irregular, but they are perfectly fine.</li>
+        <li>If you have a pasta machine, you can roll out the dough with the machine and cut to fettuccine shape. Cook the noodles in the boiling water until they float to the surface or completely cooked. Dish out using a colander.</li>
+        <li>Bring some soup to boil in another sauce pan and add some mani cai into the soup. Add a dash or two of white pepper. In a serving bowl, add a portion of the noodles and then pour the soup and mani cai into the bowl. Add the ground beef/pork and mushroom topping and the fried anchovies.</li>
+    </ol>
 </body>
 </html>
