Change 'instructions' to 'steps' in pan-mee.html

--- a/recipes/pan-mee.html
+++ b/recipes/pan-mee.html
@@ -47,7 +47,7 @@
         <li>1tsp corn starch (+1tbsp water)</li>
     </ul>
 
-    <h3>Instructions</h3>
+    <h3>Steps</h3>
     <ol>
         <li>Wash the anchovies thoroughly with water. Rinse about 5 times or until the water turns clear.</li>
         <li>Wash the beef/pork bones thoroughly and scald them with some hot boiling water. Leave the beef/pork bones in the water for a few minutes and then discard the cloudy water. Rinse again with cold running water to remove all impurities from the beef/pork bones. This step ensures that the soup will be clearer once cooked.</li>
