Add links to kaya toast and satay on homepage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/nasi-lemak.html">Nasi Lemak</a></li>
+        <li><a href="./recipes/kaya-toast.html">Kaya Toast</a></li>
         <li><a href="./recipes/mee-kari.html">Mee Kari</a></li>
         <li><a href="./recipes/pan-mee.html">Pan Mee</a></li>
+        <li><a href="./images/beef-satay.jpg">Satay</a></li>
     </ul>
 </body>
 </html>
