Add description to kaya-toast.html

--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -9,5 +9,8 @@
     <h1>Kaya Toast</h1>
 
     <img src="../images/kaya-toast.jpg" alt="Kaya toast on a plate">
+
+    <h3>Description</h3>
+    <p>It is the first thing a Malaysian seeks if they are not a cigarette smoker. It is of course the king of breakfast, the kaya toast. Best served at mamak with teh tarik or kopi o in the morning, it will definitely make your sluggish morning a teeny bit better!</p>
 </body>
 </html>
