--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -12,5 +12,12 @@
 
     <h3>Description</h3>
     <p>It is the first thing a Malaysian seeks if they are not a cigarette smoker. It is of course the king of breakfast, the kaya toast. Best served at mamak with teh tarik or kopi o in the morning, it will definitely make your sluggish morning a teeny bit better!</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Bread</li>
+        <li>Butter</li>
+        <li>and of course, Kaya</li>
+    </ul>
 </body>
 </html>
