--- a/recipes/kaya-toast.html
+++ b/recipes/kaya-toast.html
@@ -19,5 +19,13 @@
         <li>Butter</li>
         <li>and of course, Kaya</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Toast your bread and cut out the crust. You can keep the crust if you like. Cut the bread into two pieces and spread a nice layer of kaya jam on top of the bread.</li>
+        <li>Cut a thin piece of cold butter and put on top of the toast. Make sure the butter is cold so it's easier to cut.</li>
+        <li>The other half of the bread ready to go on top.</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
