--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="./recipes/kaya-toast.html">Kaya Toast</a></li>
         <li><a href="./recipes/mee-kari.html">Mee Kari</a></li>
         <li><a href="./recipes/pan-mee.html">Pan Mee</a></li>
-        <li><a href="./images/beef-satay.jpg">Satay</a></li>
+        <li><a href="./recipes/satay.html">Satay</a></li>
     </ul>
 </body>
 </html>
