Add description for satay.html

--- a/recipes/satay.html
+++ b/recipes/satay.html
@@ -9,5 +9,8 @@
     <h1>Satay</h1>
 
     <img src="../images/beef-satay.jpg" alt="2 sticks of beef satay">
+
+    <h3>Description</h3>
+    <p>Satay is one of the easiest food to eat, anytime and anywhere. With it's small portion of serving, you can eat it as a snack or as a main course for a meal. Satay can be made out of any kind of meat, but the one that comes to mind when people say satay is the beef satay. Beef satay can be eaten on its own, but most Malaysians will tell you that eating it with the spicy peanut sauce is the best way to go!</p>
 </body>
 </html>
