Add ingredients in satay.html

--- a/recipes/satay.html
+++ b/recipes/satay.html
@@ -12,5 +12,53 @@
 
     <h3>Description</h3>
     <p>Satay is one of the easiest food to eat, anytime and anywhere. With it's small portion of serving, you can eat it as a snack or as a main course for a meal. Satay can be made out of any kind of meat, but the one that comes to mind when people say satay is the beef satay. Beef satay can be eaten on its own, but most Malaysians will tell you that eating it with the spicy peanut sauce is the best way to go!</p>
+
+    <h3>Ingredients</h3>
+
+    <h4>Main Ingredients:</h4>
+    <ul>
+        <li>2lbs. of beef, sirloin (cut into 1/4 inch thick or 3/4-1 inch cubes)</li>
+        <li>1 small cucumber (cut into small pieces)</li> <li>1 red onion (cut into quarters)</li>
+        <li>Malaysian rice cakes (optional, cut into bite size pieces)</li>
+    </ul>
+
+    <h4>Marinade:</h4>
+    <ul>
+        <li>1 tsp. chili powder</li>
+        <li>1 tbsp. coriander powder</li>
+        <li>2 tsp. turmeric powder</li>
+        <li>10 shallots (peeled, cut and halved)</li>
+        <li>3 cloves garlic (peeled)</li>
+        <li>4 stalks lemongrass (white part only, cut1-inch length)</li>
+        <li>4 tbsp. sugar</li>
+        <li>1 tsp. salt</li>
+        <li>4 tbsp. oil</li>
+        <li>1-2 tbsp. water</li>
+    </ul>
+
+    <h4>Spicy Peanut Dipping Sauce:</h4>
+    <ul>
+        <li>5 tbsp. oil</li>    
+        <li>3/4 tbsp. seedless tamarind pulp (soaked in 3 1/2 tbsp. water)</li>
+        <li>3/4 cup roasted peanuts (skins removed and coarsely blended)</li>
+        <li>3/4 cup water</li>
+        <li>Sugar to taste</li>
+        <li>Salt to taste</li>
+    </ul>
+    
+    <h4>Spice Paste:</h4>
+    <ul>
+        <li>1 tbsp. oil</li>
+        <li>5-6 tbsp. chili powder</li>
+        <li>1 1/2 tbsp. coriander powder</li>
+        <li>3/4 tsp. cumin powder</li>
+        <li>3 stalks lemongrass (white part only, cut into 1-inch length)</li>
+        <li>3/4 inch galangal/<em>lengkuas</em> (sliced)</li>
+        <li>4 cloves garlic (peeled)</li>
+        <li>3 shallots (peeled)</li>
+        <li>1/2 tsp. salt</li>
+        <li>1 1/2 tbsp. sugar</li>
+        <li>Salt and sugar to taste</li>        
+    </ul>
 </body>
 </html>
