Add steps for satay.html

--- a/recipes/satay.html
+++ b/recipes/satay.html
@@ -60,5 +60,25 @@
         <li>1 1/2 tbsp. sugar</li>
         <li>Salt and sugar to taste</li>        
     </ul>
+
+    <h3>Steps</h3>
+
+    <h4>Marinate:</h4>
+    <ol>
+        <li>Blend all the ingredients in Marinade into a smooth paste. Heat up some oil in a wok, stir-fry the Marinade until fragrant and the oil slightly separates from it. Transfer out and set aside.</li>
+        <li>Marinate the beef pieces with the Marinade overnight. Keep in the refrigerator.</li>
+    </ol>
+
+    <h4>Spicy Peanut Dipping Sauce:</h4>
+    <ol>
+        <li>Extract the juice from the tamarind pulp, discard the pulps. Blend the Spice Paste ingredients into a smooth paste. Add some water if needed.</li>
+        <li>Heat up the oil in a pan, stir-fry the spice paste until fragrant, turn the heat to medium-high and continue cooking until the oil slightly separates.</li>
+        <li>Add in the tamarind juice, peanuts, water, stir well and bring it to a quick boil. Cover the pan, turn the heat to low and simmer for another 5-10 minutes. Add sugar and salt sugar to taste. Dish out and set aside.</li>
+    </ol>
+    
+    <h4>Making and Cooking Beef Satay:</h4>
+    <ol>
+        <li>Make the satay skewers with 3-4 pieces of the marinated beef threaded onto each bamboo skewer. Repeat until you use up all the meat. Grill the satay over a charcoal grill or outdoor gas grill until both sides are slightly charred, and the meat is cooked through.</li>
+    </ol>
 </body>
 </html>
