--- a/recipes/satay.html
+++ b/recipes/satay.html
@@ -80,5 +80,7 @@
     <ol>
         <li>Make the satay skewers with 3-4 pieces of the marinated beef threaded onto each bamboo skewer. Repeat until you use up all the meat. Grill the satay over a charcoal grill or outdoor gas grill until both sides are slightly charred, and the meat is cooked through.</li>
     </ol>
+
+    <p><em>This recipe is taken from <a href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a></em></p>
 </body>
 </html>
