--- a/recipes/mee-kari.html
+++ b/recipes/mee-kari.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mee Kari</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Mee Kari</h1>
