--- a/recipes/satay.html
+++ b/recipes/satay.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satay</title>
+    <link rel="stylesheet" href="../styles.css">i
 </head>
 <body>
     <h1>Satay</h1>
