--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <div>
+        <span>
+            <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
+        </span>
+        <span>
+            <a href="./recipes/kaya-toast.html">Kaya Toast</a>
+        </span>
+        <span>
+            <a href="./recipes/mee-kari.html">Mee Kari</a>
+        </span>
+        <span>
+            <a href="./recipes/pan-mee.html">Pan Mee</a>
+        </span>
+        <span>
+            <a href="./recipes/satay.html">Satay</a>
+        </span>
+    </div>
+    <!-- <ul class="dish-pages">
         <li><a href="./recipes/nasi-lemak.html">Nasi Lemak</a></li>
         <li><a href="./recipes/kaya-toast.html">Kaya Toast</a></li>
         <li><a href="./recipes/mee-kari.html">Mee Kari</a></li>
         <li><a href="./recipes/pan-mee.html">Pan Mee</a></li>
         <li><a href="./recipes/satay.html">Satay</a></li>
-    </ul>
+    </ul> -->
 </body>
 </html>
