--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>My Recipe Book</h1>
     <div>
         <span>
             <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
