Add the icon and link-wrap for nasi lemak at home

--- a/index.html
+++ b/index.html
@@ -10,9 +10,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body> 
-    <h1>My Recipe Book</h1>
     <div>
-        <span>
+        <h1>My Recipe Book</h1>
+    </div>
+    <div>
+        <div>
+            <div>
+                <a href="./recipes/nasi-lemak.html">
+                    <img class="icons" src="./icons/nasi-lemak.png" alt="An illustration of Nasi Lemak">
+                </a>
+            </div>
+            <div>
+                <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
+            </div>
+        </div>
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <!-- <span>
             <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
         </span>
         <span>
@@ -26,7 +70,7 @@
         </span>
         <span>
             <a href="./recipes/satay.html">Satay</a>
-        </span>
+        </span> -->
     </div>
 </body>
 </html>
