Add icons and link-wrap to all recipe divs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
             <div>
                 <a href="./recipes/nasi-lemak.html">
-                    <img class="icons" src="./icons/nasi-lemak.png" alt="An illustration of Nasi Lemak">
+                    <img class="icons" src="./icons/nasi-lemak.png" alt="A plate of coconut rice with anchovies, peanuts and chilli paste.">
                 </a>
             </div>
             <div>
@@ -26,51 +26,44 @@
         </div>
         <div>
             <div>
-
+                <a href="./recipes/kaya-toast.html">
+                    <img class="icons" src="./icons/kaya-toast.png" alt="Toasts that are spread with kaya and butter on a plate">
+                </a>
             </div>
             <div>
-
+                <a href="./recipes/kaya-toast.html">Kaya Toast</a>
             </div>
         </div>
         <div>
             <div>
-
+                <a href="./recipes/satay.html">
+                    <img class="icons" src="./icons/satay.png" alt="Skewers of grilled beef covered in spicy peanut sauce along with some rice cakes on a plate">
+                </a>
             </div>
             <div>
-
+                <a href="./recipes/satay.html">Satay</a>
             </div>
         </div>
         <div>
             <div>
-
+                <a href="./recipes/mee-kari.html">
+                    <img class="icons" src="./icons/mee-kari.png" alt="A bowl of noodles with curry broth. In the curry, there is chicken, fishballs, eggs and vegetables">
+                </a>
             </div>
             <div>
-
+                <a href="./recipes/mee-kari.html">Mee Kari</a>
             </div>
         </div>
         <div>
             <div>
-
+                <a href="./recipes/pan-mee.html">
+                    <img class="icons" src="./icons/pan-mee.png" alt="A bowl of flat noodle in soup with beef, mushroom and vegetables.">
+                </a>
             </div>
             <div>
-
+                <a href="./recipes/pan-mee.html">Pan Mee</a>
             </div>
         </div>
-        <!-- <span>
-            <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
-        </span>
-        <span>
-            <a href="./recipes/kaya-toast.html">Kaya Toast</a>
-        </span>
-        <span>
-            <a href="./recipes/mee-kari.html">Mee Kari</a>
-        </span>
-        <span>
-            <a href="./recipes/pan-mee.html">Pan Mee</a>
-        </span>
-        <span>
-            <a href="./recipes/satay.html">Satay</a>
-        </span> -->
     </div>
 </body>
 </html>
