--- a/index.html
+++ b/index.html
@@ -13,55 +13,59 @@
     <div>
         <h1>My Recipe Book</h1>
     </div>
-    <div>
-        <div>
+    <div class="outer-container">
+        <div class="inner-container">
             <div>
-                <a href="./recipes/nasi-lemak.html">
-                    <img class="icons" src="./icons/nasi-lemak.png" alt="A plate of coconut rice with anchovies, peanuts and chilli paste.">
-                </a>
+                <div>
+                    <a href="./recipes/nasi-lemak.html">
+                        <img class="icons" src="./icons/nasi-lemak.png" alt="A plate of coconut rice with anchovies, peanuts and chilli paste.">
+                    </a>
+                </div>
+                <div>
+                    <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
+                </div>
             </div>
             <div>
-                <a href="./recipes/nasi-lemak.html">Nasi Lemak</a>
-            </div>
-        </div>
-        <div>
-            <div>
-                <a href="./recipes/kaya-toast.html">
-                    <img class="icons" src="./icons/kaya-toast.png" alt="Toasts that are spread with kaya and butter on a plate">
-                </a>
-            </div>
-            <div>
-                <a href="./recipes/kaya-toast.html">Kaya Toast</a>
-            </div>
-        </div>
-        <div>
-            <div>
-                <a href="./recipes/satay.html">
-                    <img class="icons" src="./icons/satay.png" alt="Skewers of grilled beef covered in spicy peanut sauce along with some rice cakes on a plate">
-                </a>
+                <div>
+                    <a href="./recipes/kaya-toast.html">
+                        <img class="icons" src="./icons/kaya-toast.png" alt="Toasts that are spread with kaya and butter on a plate">
+                    </a>
+                </div>
+                <div>
+                    <a href="./recipes/kaya-toast.html">Kaya Toast</a>
+                </div>
             </div>
             <div>
-                <a href="./recipes/satay.html">Satay</a>
-            </div>
-        </div>
-        <div>
-            <div>
-                <a href="./recipes/mee-kari.html">
-                    <img class="icons" src="./icons/mee-kari.png" alt="A bowl of noodles with curry broth. In the curry, there is chicken, fishballs, eggs and vegetables">
-                </a>
-            </div>
-            <div>
-                <a href="./recipes/mee-kari.html">Mee Kari</a>
+                <div>
+                    <a href="./recipes/satay.html">
+                        <img class="icons" src="./icons/satay.png" alt="Skewers of grilled beef covered in spicy peanut sauce along with some rice cakes on a plate">
+                    </a>
+                </div>
+                <div>
+                    <a href="./recipes/satay.html">Satay</a>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="inner-container">
             <div>
-                <a href="./recipes/pan-mee.html">
-                    <img class="icons" src="./icons/pan-mee.png" alt="A bowl of flat noodle in soup with beef, mushroom and vegetables.">
-                </a>
+                <div>
+                    <a href="./recipes/mee-kari.html">
+                        <img class="icons" src="./icons/mee-kari.png" alt="A bowl of noodles with curry broth. In the curry, there is chicken, fishballs, eggs and vegetables">
+                    </a>
+                </div>
+                <div>
+                    <a href="./recipes/mee-kari.html">Mee Kari</a>
+                </div>
             </div>
             <div>
-                <a href="./recipes/pan-mee.html">Pan Mee</a>
+                <div>
+                    <a href="./recipes/pan-mee.html">
+                        <img class="icons" src="./icons/pan-mee.png" alt="A bowl of flat noodle in soup with beef, mushroom and vegetables.">
+                    </a>
+                </div>
+                <div>
+                    <a href="./recipes/pan-mee.html">Pan Mee</a>
+                </div>
             </div>
         </div>
     </div>
