Change the layout of the flexbox

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body> 
-    <div>
+    <div id="title-container">
         <h1>My Recipe Book</h1>
     </div>
     <div class="outer-container">
