Set up the template for recipe page

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -5,9 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nasi Lemak</title>
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Nasi Lemak</h1>
+    <div class="upper-section">
+        <div class="title" id="nasi-lemak-title">
+            Nasi Lemak
+        </div>
+        <div>
+            <img class="title-icon" src="../icons/nasi-lemak.png" alt="A plate of coconut rice with anchovies, peanuts and chilli paste.">
+        </div>
+    </div>
+    <div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </div>
+    <!-- <h1>Nasi Lemak</h1>
     <img src="../images/nasi-lemak.jpg" alt="A plate of Nasi Lemak">
 
     <h3>Description</h3>
@@ -61,6 +84,6 @@
         <li>Enjoy!</li>
     </ol>
 
-    <p><em>This recipe is taken from <a href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a></em></p>
+    <p><em>This recipe is taken from <a href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a></em></p> -->
 </body>
 </html>
