Change the padding size of the page and add footer

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -13,7 +13,7 @@
             <img class="title-icon" src="../icons/nasi-lemak.png" alt="An illustration of a plate of coconut rice with anchovies, peanuts and chilli paste.">
         </div>
     </div>
-    <div>
+    <div class="lower-section">
         <div>
             <h3>Description</h3>
             <p>Nasi Lemak is Malaysia's national dish. Usually eaten during breakfast or dinner (or lunch or late night ...), Nasi Lemak in its most basic form is coconut rice paired with <em>sambal</em> (chilli paste), peanuts and anchovies. Slices of cucumber are also included on the side, along with half of boiled egg.</p>
@@ -69,8 +69,8 @@
             </ol>
         </div>
     </div>
-    <div>
-        This recipe is taken from <a href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com
+    <div class="footer">
+        This recipe is taken from <a id="nasi-lemak-source" href="https://rasamalaysia.com/nasi-lemak-recipe/" target="_blank" rel="noopenner noreferrer">rasamalaysia.com</a>
     </div>
 </body>
 </html>
