Make the steps and instructions flex

--- a/recipes/nasi-lemak.html
+++ b/recipes/nasi-lemak.html
@@ -15,58 +15,60 @@
     </div>
     <div class="lower-section">
         <div>
-            <h3>Description</h3>
+            <h3 class="nasi-lemak-headers">Description</h3>
             <p>Nasi Lemak is Malaysia's national dish. Usually eaten during breakfast or dinner (or lunch or late night ...), Nasi Lemak in its most basic form is coconut rice paired with <em>sambal</em> (chilli paste), peanuts and anchovies. Slices of cucumber are also included on the side, along with half of boiled egg.</p>
             <p>Nasi Lemak is also commonly eaten with protein such as chicken (usually fried), more eggs, squids, or cow's lungs (boiled or fried).</p>
         </div>
-        <div>
-            <h3>Ingredients</h3>
+        <div class="ingre-and-steps">
+            <div>
+                <h3 class="nasi-lemak-headers">Ingredients</h3>
 
-            <h4>Coconut Milk Steamed Rice:</h4>
-            <ul>
-                <li>3 screwpine leaves aka pandan leaves (tie in knots)</li>
-                <li>Salt to taste</li>
-                <li>5.6oz of coconut milk</li>
-                <li>Water</li>
-                <li>2 cups of rice</li>
-            </ul>
+                <h4>Coconut Milk Steamed Rice:</h4>
+                <ul>
+                    <li>3 screwpine leaves aka pandan leaves (tie in knots)</li>
+                    <li>Salt to taste</li>
+                    <li>5.6oz of coconut milk</li>
+                    <li>Water</li>
+                    <li>2 cups of rice</li>
+                </ul>
 
-            <h4>Tamarind Juice:</h4>
-            <ul>
-                <li>Tamarind pulp</li>
-                <li>1 cup of water</li>
-            </ul>
+                <h4>Tamarind Juice:</h4>
+                <ul>
+                    <li>Tamarind pulp</li>
+                    <li>1 cup of water</li>
+                </ul>
 
-            <h4>Sambal:</h4>
-            <ul>
-                <li>1 cup of anchovies</li>
-                <li>1/2 of red onion</li>
-                <li>4 shallots</li>
-                <li>1 clove of garlic</li>
-                <li>1 teaspoon of <em>belacan</em> (prawn paste)</li>
-                <li>10 dried chillies</li>
-                <li>1 tablespoon of sugar</li>
-                <li>1/4 teaspoon of salt</li>
-            </ul>
+                <h4>Sambal:</h4>
+                <ul>
+                    <li>1 cup of anchovies</li>
+                    <li>1/2 of red onion</li>
+                    <li>4 shallots</li>
+                    <li>1 clove of garlic</li>
+                    <li>1 teaspoon of <em>belacan</em> (prawn paste)</li>
+                    <li>10 dried chillies</li>
+                    <li>1 tablespoon of sugar</li>
+                    <li>1/4 teaspoon of salt</li>
+                </ul>
 
-            <h4>Other Ingredients:</h4>
-            <ul>
-                <li>Your choice of protein</li>
-                <li>Slices of cucumber</li>
-                <li>2 hard boiled eggs (cut in half)</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Steps</h3>
-            <ol>
-                <li>Fry the anchovies until they turn light brown</li>
-                <li>To cook the rice, wash and drain as per usual. In addition to the water, add in coconut milk and salt before cooking. Lastly, add in pandan leaves before leaving it to cook.</li>
-                <li>Soak tamarind juice in water for 15 minutes. Squeeze the tamarind pulp to extract the flavor into the water. Drain the pulp and keep the tamarind juice.</li>
-                <li>Slice the red onions into rings. Smash the belacan with shallots, garlic and deseeded dried chillies with a mortar and pestle or a blender.</li>
-                <li>Cook your protein however you like. Dish up the cooked coconut milk rice and pour some sambal on top of it. Put slices of cucumber and eggs alongside them. Lastly, put the protein of choice in as well.</li>
-                <li>Fry the sambal until fragrant. Add in onion rings and ikan bilis. Stir well. Add tamarind juice, salt and sugar. Simmer on low heat until the gravy thickens. Set aside.</li>
-                <li>Enjoy!</li>
-            </ol>
+                <h4>Other Ingredients:</h4>
+                <ul>
+                    <li>Your choice of protein</li>
+                    <li>Slices of cucumber</li>
+                    <li>2 hard boiled eggs (cut in half)</li>
+                </ul>
+            </div>
+            <div class="steps">
+                <h3 class="nasi-lemak-headers">Steps</h3>
+                <ol>
+                    <li>Fry the anchovies until they turn light brown</li>
+                    <li>To cook the rice, wash and drain as per usual. In addition to the water, add in coconut milk and salt before cooking. Lastly, add in pandan leaves before leaving it to cook.</li>
+                    <li>Soak tamarind juice in water for 15 minutes. Squeeze the tamarind pulp to extract the flavor into the water. Drain the pulp and keep the tamarind juice.</li>
+                    <li>Slice the red onions into rings. Smash the belacan with shallots, garlic and deseeded dried chillies with a mortar and pestle or a blender.</li>
+                    <li>Cook your protein however you like. Dish up the cooked coconut milk rice and pour some sambal on top of it. Put slices of cucumber and eggs alongside them. Lastly, put the protein of choice in as well.</li>
+                    <li>Fry the sambal until fragrant. Add in onion rings and ikan bilis. Stir well. Add tamarind juice, salt and sugar. Simmer on low heat until the gravy thickens. Set aside.</li>
+                    <li>Enjoy!</li>
+                </ol>
+            </div>
         </div>
     </div>
     <div class="footer">
